# Instagram_marketing

./: .env.example  .gitignore  README.md  requirements.txt  test_git.txt
instagram/: README.md  pyproject.toml
instagram/src/instagram/: crew.py  main.py
instagram/src/instagram/config/: agents.yaml  tasks.yaml
instagram/src/instagram/tools/: __init__.py  search.py
instamarket/: pyvenv.cfg
instamarket/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
new_env/: pyvenv.cfg
new_env/Scripts/: activate  activate.bat
